# palimpsest

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  WALKTHROUGH.md  langChainTest.py  langSmithEnv  langSmithTest.py  requirements.txt
browser/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
browser/src/: App.tsx  index.css
core/: README.md  pyproject.toml
core/docs/: live-testing-guide.md
core/palimpsest/: __init__.py  characters.py  cli.py  project.py  server.py
core/palimpsest/alignment/: __init__.py  alphabet_align.py  cross_similarity.py  edition_diff.py  gumbel.py  records.py  smith_waterman.py
core/palimpsest/annotation/: __init__.py  bodies.py  model.py  serializer.py
core/palimpsest/formats/: signals.py
core/palimpsest/ingest/: content_filters.py  epub_parser.py  extractor.py  normalizer.py  segmenter.py
core/palimpsest/services/: embedding.py  manager.py
core/palimpsest/tracks/: __init__.py  alphabet.py  base.py  compartments.py  coreference.py  dialogue.py  entities.py  lexical.py  lithmm.py  narrative_arc.py  registry.py  rqa.py  self_similarity.py  sentiment.py  syntax.py  topics.py
core/palimpsest/vectorstore/: protocol.py  sqlite_vec.py
core/tests/: conftest.py  test_alignment.py  test_alphabet_align.py  test_annotation.py  test_cli.py  test_content_filters.py  test_edition_diff.py  test_ingest.py  test_pipeline.py  test_project.py  test_registry.py  test_server.py  test_signals.py  test_tracks.py  test_vectorstore.py
crates/palimpsest-core/: Cargo.toml
crates/palimpsest-core/benches/: core_benchmarks.rs
crates/palimpsest-core/examples/: bench_real_data.rs
crates/palimpsest-core/src/: annotation.rs  arena.rs  density.rs  filter.rs  jsonl.rs  lib.rs  project.rs  range_index.rs  signals.rs
crates/palimpsest-tauri/: Cargo.toml  tauri.conf.json
crates/palimpsest-tauri/capabilities/: default.json
crates/palimpsest-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
docs/architecture/: ADR-001-annotation-format.md  ADR-005-jbrowse2-patterns.md
fixtures/: pride-prejudice-ch1.txt
projects/pride-and-prejudice/: metadata.json  pipeline_run.json  reference.sha256  reference.txt
projects/pride-and-prejudice-ch1/: metadata.json  pipeline_run.json  reference.sha256
research/: DOCUMENT-MAP.md  development-history.md  download-paper.py  papers-to-download.json
research/bibliography/: master-bibliography.md
research/domain-synthesis/: 00-alignment-convergence-thesis.md  00-back-to-drawing-board.md  01-conceptual-framework.md  02-PRD-outline.md  03-deep-read-nlp-narrative.md  04-deep-read-genomics.md  05-deep-read-literary-studies.md  06-deep-read-visualization.md  07-annotation-framework.md  08-annotation-cl-frameworks.md  12-development-roadmap.md  (+22 more)
scripts/: extract_bible_demo.py
specs/: LFO.md  PAF-export.md  annotation-model.md  lfo-v0.1.json  paf-v0.1.md  signals.md
ui/: index.html  package-lock.json  package.json
(+271 files in other folders)
