[workspace]
members = ["crates/palimpsest-core", "crates/palimpsest-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nathaniel Cannon"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
bitvec = "1"
rayon = "1"
criterion = { version = "0.5", features = ["html_reports"] }
static_assertions = "1.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
