[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palimpsest"
version = "0.1.0"
description = "Computational literary analysis platform"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "spacy>=3.7",
    "vaderSentiment>=3.3",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "pymupdf>=1.23",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "sqlite-vec>=0.1",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
booknlp = ["booknlp>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
palimpsest = "palimpsest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["palimpsest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["../tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["palimpsest"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
