[package]
name = "palimpsest-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
bitvec = { workspace = true }
rayon = { workspace = true }
static_assertions = { workspace = true }
thiserror = "2"
bumpalo = { version = "3", features = ["collections"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "core_benchmarks"
harness = false
