[package]
name = "palimpsest-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
palimpsest-core = { path = "../palimpsest-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "palimpsest_tauri"
crate-type = ["staticlib", "cdylib", "lib"]
